deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tagent
  labels:
    app.kubernetes.io/name: tagent
